<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MythSync</string>

    <string name="msg_not_connected">Not Connected</string>
    <string name="msg_empty">No Recordings</string>

    <string name="btn_home">Home</string>
    <string name="btn_away">Away</string>
    <string name="btn_disconnect">Disconnect</string>

    <string name="btn_save">Save</string>
    <string name="btn_close">Close</string>

    <string name="lbl_location_profile_type">Type:</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_url">URL:</string>
    <string name="lbl_hostname">Hostname:</string>

    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_preferences">Preferences</string>

    <string name="lbl_location_profile_dialog_title">Settings</string>

    <string-array name="location_profile_types_array">
        <item>HOME</item>
        <item>AWAY</item>
    </string-array>

</resources>
